<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/ivResult"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_marginStart="0dp"
		android:layout_marginTop="0dp"
		android:layout_marginEnd="0dp"
		android:contentDescription="@string/image_button" />

	<Button
		android:id="@+id/btnRetake"
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginStart="30dp"
		android:layout_marginBottom="30dp"
		android:drawableEnd="@drawable/ic_camera"
		android:text="@string/retake" />

	<Button
		android:id="@+id/btnNextToForm"
		android:layout_width="120dp"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:layout_marginEnd="30dp"
		android:layout_marginBottom="30dp"
		android:text="@string/next" />

</RelativeLayout>