<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".feature.VideoResultFragment">

	<VideoView
		android:id="@+id/vvResult"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/ivPlayResult"
		android:layout_width="60dp"
		android:layout_height="60dp"
		android:layout_centerInParent="true"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/image_button"
		android:src="@drawable/ic_play_circle"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/vvResult"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/btnRetakeVideo"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:drawableEnd="@drawable/ic_videocam"
		android:text="@string/retake"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.15"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/vvResult"
		app:layout_constraintVertical_bias="0.975" />

	<Button
		android:id="@+id/btnNextResultVideo"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/next"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.85"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.975" />
</androidx.constraintlayout.widget.ConstraintLayout>