<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	tools:context=".menu.daily.DailyShedFragment">

	<androidx.cardview.widget.CardView
		android:id="@+id/btnEntry"
		android:layout_width="125dp"
		android:layout_height="125dp"
		android:elevation="8dp"
		android:layout_marginTop="24dp"
		app:cardCornerRadius="15dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/bg_card_menu"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/entry"
				android:textAlignment="center"
				android:textAllCaps="true"
				android:textColor="@android:color/white"
				android:textSize="24sp"
				android:textStyle="bold" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/btnReport"
		android:layout_width="125dp"
		android:layout_height="125dp"
		android:elevation="8dp"
		android:layout_marginTop="24dp"
		app:cardCornerRadius="15dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/bg_card_menu"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/report"
				android:textAlignment="center"
				android:textAllCaps="true"
				android:textColor="@android:color/white"
				android:textSize="24sp"
				android:textStyle="bold" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/btnConfirmation"
		android:layout_width="125dp"
		android:layout_height="125dp"
		android:elevation="8dp"
		android:layout_marginTop="24dp"
		android:layout_marginBottom="24dp"
		app:cardCornerRadius="15dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/bg_card_menu"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/confirmation"
				android:textAlignment="center"
				android:textAllCaps="true"
				android:textColor="@android:color/white"
				android:textSize="14sp"
				android:textStyle="bold" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

</LinearLayout>