<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".menu.daily.entry.FeedAndDeadFormFragment">


	<TextView
		android:id="@+id/textView4"
		android:layout_width="0dp"
		android:layout_height="50dp"
		android:background="#f5c400"
		android:gravity="center_vertical"
		android:paddingStart="10dp"
		android:paddingEnd="10dp"
		android:text="@string/penerimaan_pakan"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5" />

	<TextView
		android:id="@+id/textView6"
		android:layout_width="0dp"
		android:layout_height="50dp"
		android:layout_marginTop="24dp"
		android:layout_marginBottom="8dp"
		android:gravity="center_vertical"
		android:paddingStart="15dp"
		android:paddingEnd="15dp"
		android:text="@string/penerimaan_zak"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/guideline2"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/textView8"
		android:layout_width="0dp"
		android:layout_height="50dp"
		android:layout_marginTop="24dp"
		android:layout_marginBottom="8dp"
		android:gravity="center_vertical"
		android:paddingStart="15dp"
		android:paddingEnd="15dp"
		android:text="@string/sisa_pakan_zak"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/guideline2"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6"
		app:layout_constraintVertical_bias="0.0" />

	<EditText
		android:id="@+id/etTerimaPakan"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:ems="10"
		android:inputType="number"
		android:textDirection="rtl"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView6"
		app:layout_constraintTop_toBottomOf="@+id/textView4"
		app:layout_constraintVertical_bias="0.0" />

	<EditText
		android:id="@+id/etSisaPakan"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:ems="10"
		android:inputType="number"
		android:textDirection="rtl"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline2"
		app:layout_constraintTop_toBottomOf="@+id/etTerimaPakan"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="0dp"
		android:layout_height="50dp"
		android:layout_marginBottom="8dp"
		android:background="#f5c400"
		android:gravity="center_vertical"
		android:paddingStart="10dp"
		android:paddingEnd="10dp"
		android:text="@string/kematian_ayam"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"
		app:layout_constraintVertical_bias="0.3" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="0dp"
		android:layout_height="50dp"
		android:layout_marginTop="24dp"
		android:layout_marginBottom="8dp"
		android:gravity="center_vertical"
		android:paddingStart="15dp"
		android:paddingEnd="15dp"
		android:text="@string/angka_kematian"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/guideline2"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView5"
		app:layout_constraintVertical_bias="0.0" />

	<EditText
		android:id="@+id/etKematian"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:ems="10"
		android:inputType="number"
		android:textDirection="rtl"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline2"
		app:layout_constraintTop_toBottomOf="@+id/textView5"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/textView12"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:layout_marginBottom="8dp"
		android:paddingStart="15dp"
		android:paddingEnd="15dp"
		android:text="@string/keterangan"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/guideline2"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView7"
		app:layout_constraintVertical_bias="0.0" />

	<EditText
		android:id="@+id/etKeterangan"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="15dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="15dp"
		android:ems="10"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView12"
		app:layout_constraintVertical_bias="0.0" />

	<ImageButton
		android:id="@+id/btnNextFD"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:background="@drawable/bg_button_2"
		android:rotation="180"
		android:src="@drawable/ic_arrow_2_blue"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>