<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".menu.daily.entry.ScreenFormFragment">

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:visibility="invisible"
		app:layout_constraintGuide_percent="0.5" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:gravity="center_horizontal|center_vertical"
		android:text="@string/jumlah_sekat"
		android:textSize="18sp"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintHorizontal_bias="0.58"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/etJumlahSekat"
		android:layout_width="50dp"
		android:layout_height="40dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:inputType="number"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:gravity="center_horizontal|center_vertical"
		android:text="@string/bb_rata_gr"
		android:textSize="18sp"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView" />

	<EditText
		android:id="@+id/etBbRata"
		android:layout_width="50dp"
		android:layout_height="40dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:ems="10"
		android:inputType="numberDecimal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toBottomOf="@+id/etJumlahSekat"/>

	<ImageButton
		android:id="@+id/btnAdd"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/bg_button_2"
		android:contentDescription="@string/image_button"
		android:src="@drawable/ic_add"
		app:layout_constraintBottom_toTopOf="@+id/rvScreen"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.50"
		app:layout_constraintStart_toEndOf="@+id/etBbRata"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rvScreen"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:background="@drawable/bg_recycler_screen"
		android:padding="10dp"
		tools:listitem="@layout/daily_screen_content_recycle"
		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
		app:layout_constraintBottom_toTopOf="@+id/btnNextScreen"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<ImageButton
		android:id="@+id/btnNextScreen"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:background="@drawable/bg_button_2"
		android:rotation="180"
		android:src="@drawable/ic_arrow_2_blue"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>